@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-25T16:33:31Z",
-  "count_outdated" : 257,
-  "uniques_outdated" : 126,
-  "count" : 284,
+  "timestamp" : "2022-07-26T02:30:40Z",
+  "count_outdated" : 261,
+  "uniques_outdated" : 127,
+  "count" : 288,
   "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2022-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 2,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
